@@ -11,6 +11,7 @@
 1.9 preview 12 (2011-03-??)
  ~ Cykloatlas: max zoom level extended to 16
  + New map source: Canada Toporama  
+ + Convert an existing atlas profile to a different output format 
 
 1.9 preview 11 (2011-03-02)
  ! Error when using a BeanShell map source with certain atlas formats
